--- a/src/FlossApp.Wasm/wwwroot/index.html
+++ b/src/FlossApp.Wasm/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="FlossApp.Wasm.styles.css" rel="stylesheet" />
+    <script src="js/cookieService.js" type="module"></script>
     <script type="text/javascript">
 
         // Single Page Apps for GitHub Pages
